openshift/configs/ingress/deployment-ingressgateway.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"antifraud"}]'
  labels:
    app: ingress-${NAMESPACE}
    app.kubernetes.io/component: gateways
    app.kubernetes.io/instance: ${ISTIO_CONTROL_PLANE}
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: gateways
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.0.2-3.el8-76
    chart: gateways
    heritage: Tiller
    istio: ingress-${NAMESPACE}
    maistra-version: 2.0.2
    maistra.io/owner: ${ISTIO_CONTROL_PLANE}
    release: istio
  name: ingress-${NAMESPACE}
spec:
  progressDeadlineSeconds: 1200
  replicas: ${INGRESS_REPLICAS_COUNT}
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ingress-${NAMESPACE}
      istio: ingress-${NAMESPACE}
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'false'
      labels:
        app: ingress-${NAMESPACE}
        chart: gateways
        heritage: Tiller
        istio: ingress-${NAMESPACE}
        release: istio
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
              weight: 2
            - preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - ppc64le
              weight: 2
            - preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - s390x
              weight: 2
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - ppc64le
                      - s390x
      containers:
        - args:
            - proxy
            - router
            - --domain
            - $(POD_NAMESPACE).svc.cluster.local
            - --proxyLogLevel=warning
            - --proxyComponentLogLevel=misc:error
            - --log_output_level=default:info
            - --serviceCluster
            - ingress-${NAMESPACE}
            - --trust-domain=cluster.local
          image: ${PROXY_IMAGE}
          imagePullPolicy: IfNotPresent
          name: istio-proxy
          ports:
            - containerPort: 15021
              name: status-port
              protocol: TCP
            - containerPort: 5443
              name: https
              protocol: TCP
            - containerPort: 15443
              name: tls
              protocol: TCP
            - containerPort: 15012
              protocol: TCP
            - containerPort: 853
              protocol: TCP
            - containerPort: 15090
              name: http-envoy-prom
              protocol: TCP
            - containerPort: ${INGRESS_HOST_OTT_PORT}
              name: https-${INGRESS_HOST_OTT_PORT}
              protocol: TCP
            - containerPort: ${INGRESS_HOST_TLS_PORT}
              name: https-${INGRESS_HOST_TLS_PORT}
              protocol: TCP
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15021
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: ${INGRESS_LIMIT_CPU}
              memory: ${INGRESS_LIMIT_MEMORY}
              ephemeral-storage: ${INGRESS_PROXY_LIMIT_EPHEMERAL_STORAGE}
            requests:
              cpu: ${INGRESS_REQUEST_CPU}
              memory: ${INGRESS_REQUEST_MEMORY}
              ephemeral-storage: ${INGRESS_PROXY_REQUEST_EPHEMERAL_STORAGE}
          terminationMessagePath: /dev/termination-log
          volumeMounts:
            - mountPath: /etc/istio/proxy
              name: istio-envoy
            - mountPath: /etc/istio/config
              name: config-volume
            - mountPath: /var/run/secrets/istio
              name: istiod-ca-cert
            - mountPath: /etc/istio/pod
              name: podinfo
            - mountPath: /etc/istio/ingressgateway-certs
              name: ingressgateway-certs
              readOnly: true
            - mountPath: /etc/istio/ingressgateway-ca-certs
              name: ingressgateway-ca-certs
              readOnly: true
            - name: ott-uds-socket
              mountPath: /mnt/ott-uds-socket
          securityContext:
            readOnlyRootFilesystem: true
        - resources:
            limits:
              cpu: 400m
              memory: 500Mi
              ephemeral-storage: ${INGRESS_OTT_LIMIT_EPHEMERAL_STORAGE}
            requests:
              cpu: 300m
              memory: 300Mi
              ephemeral-storage: ${INGRESS_OTT_REQUEST_EPHEMERAL_STORAGE}
          terminationMessagePath: /dev/termination-log
          name: ott-sidecar
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
            - name: http-envoy-prom
              containerPort: 15090
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: ott-secret
              readOnly: true
              mountPath: /mnt/secrets
            - name: ott-uds-socket
              mountPath: /mnt/ott-uds-socket
            - name: ott-logback
              readOnly: true
              mountPath: /tmp/ott-logback.xml
            - name: ott-tmp
              mountPath: /tmp
          terminationMessagePolicy: File
          image: ${OTT_REGISTRY_URL}
          securityContext:
            readOnlyRootFilesystem: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 60
      volumes:
        - configMap:
            defaultMode: 420
            name: istio-ca-root-cert
          name: istiod-ca-cert
        - downwardAPI:
            defaultMode: 420
            items:
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.labels
                path: labels
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.annotations
                path: annotations
          name: podinfo
        - emptyDir: {}
          name: istio-envoy
        - name: istio-certs
          secret:
            defaultMode: 400
            optional: true
            secretName: istio.default
        - configMap:
            defaultMode: 420
            name: cm-istio-basic
            optional: true
          name: config-volume
        - name: ingressgateway-certs
          secret:
            defaultMode: 400
            optional: true
            secretName: istio-ingressgateway-certs
        - name: ingressgateway-ca-certs
          secret:
            defaultMode: 400
            optional: true
            secretName: istio-ingressgateway-ca-certs
        - name: ott-secret
          secret:
            secretName: ott-secret
            defaultMode: 400
        - name: ott-uds-socket
          emptyDir:
            medium: Memory
        - name: ott-logback
          configMap:
            name: cm-ingress-ott-logback
            defaultMode: 400
        - name: ott-tmp
          emptyDir: { }
